--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+.DS_Store
 HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+*.class
 
 ### STS ###
 .apt_generated
